fix: resolve test failures in concurrency and insert statement tests